# Server-Health-Monitor

./: CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO  example-unit-test.c  example-unit-test.cpp  integration_test.cpp  integration_test.hpp  kmod_test.hpp  mem_test.c  mem_test.h  monitor.c  monitor.h  monitor_config.c  monitor_config.h  monitor_status.c  monitor_status.h  pthread_neural_network.c  scheduler.cpp  server_monitor.c  server_monitor_tests.c  syscall_test.c  syscall_test.h  system_info_generator.cpp  system_lib.h  system_lib.hpp  test_framework.c  test_framework.h  trionic.ts  troubleshooter_check.c  vercel.json
.github/workflows/: ci.yml
docs/: index.html  main.js  styles.css
extras/manager-audit/: AUDIT_BUNDLE_INSTRUCTIONS.md  CHANGE_STATEMENT_TEMPLATE.md  PROMPT_MANAGER_AUDIT.md  make_audit_bundle.ps1  make_audit_bundle.sh
